--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "kvprocessor"
-version = "0.1.2"
+version = "0.1.5"
 description = "A Python package for processing and validating configuration dictionaries against a custom .kv file format"
 readme = "README.md"
 authors = [{name = "[Your Name]", email = "connor@connor33341.dev"}]
@@ -13,7 +13,9 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-dependencies = []
+dependencies = [
+    "requests>=2.25.0",
+]
 requires-python = ">=3.8"
 
 [project.urls]
